--- a/README
+++ b/README
@@ -27,5 +27,6 @@ new [N]
 status
       Print current game status information.
 
-step
-      Print possible steps.
+step [step1 [step2 [... stepN]]]
+      Print possible steps if no argumets.
+      Perform step sequence step1 step2 ... stepN.
