--- a/README
+++ b/README
@@ -37,3 +37,10 @@ history
 set ai [name]
       Print all possible AIs if “name” is not set.
       Set AI with “name” as current engine overwise.
+
+ai go [flags]
+      AI makes next move (one or few steps if needed).
+      Some flags (combined by “|”) are supported:
+          score - print game score, propability to win for first player from 0 to 100.
+          time  - time engine stent for thinking
+          steps - prints stats for every possible step.
